[gd_scene load_steps=5 format=3 uid="uid://b0ge3u2puigsh"]

[ext_resource type="Script" uid="uid://qrekf1okstpv" path="res://lane/lane.gd" id="1_mfiqx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6ma31"]
size = Vector3(1.8, 2.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k64ag"]
shading_mode = 0
albedo_color = Color(0.5764706, 0.77254903, 0.44705883, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qt8c7"]
material = SubResource("StandardMaterial3D_k64ag")
size = Vector3(1.8, 2.2, 0.1)

[node name="Lane" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
script = ExtResource("1_mfiqx")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_6ma31")

[node name="CardSlot" type="Node3D" parent="."]

[node name="Highlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_qt8c7")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
[connection signal="child_entered_tree" from="CardSlot" to="." method="_on_card_slot_child_entered_tree"]
[connection signal="child_exiting_tree" from="CardSlot" to="." method="_on_card_slot_child_exiting_tree"]
